# cli-candlestick-chart

./: Cargo.toml  LICENSE  README.md  TSLA.csv
.github/: FUNDING.yml
.github/workflows/: release.yml  rust.yml
examples/: BTC-USD.csv  basic-with-csv-parsing.rs  currency-conversion.rs  fetch-from-binance.rs  tui-renderer.rs
src/: candle_set.rs  chart.rs  chart_data.rs  chart_renderer.rs  info_bar.rs  lib.rs  main.rs  volume_pane.rs  y_axis.rs
