[package]
name = "cli-candlestick-chart"
version = "0.1.2"
license = "MIT"
description = "A library for displaying candlestick charts right into your terminal."
readme = "README.md"
homepage = "https://github.com/Julien-R44/cli-candlestick-chart"
repository = "https://github.com/Julien-R44/cli-candlestick-chart"
keywords = ["cli", "terminal", "trading", "candlestick", "chart"]
categories = ["command-line-interface", "visualization"]
authors = ["Julien-R44 <julien@ripouteau.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
terminal_size = "0.1.17"
colored = "2"

[dev-dependencies]
csv = "1.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }

[[example]]
name = "basic-with-csv-parsing"
required-features = ["serde"]

[[example]]
name = "fetch-from-binance"
required-features = ["serde"]